package at.technikum.mtcg.models;

public class Deck {
}
